styling of simple todo list app

--- a/todo.html
+++ b/todo.html
@@ -12,9 +12,10 @@
 <body>
     <div class="img-container">
         <div class="container">
-            <h1>To Do List</h1>
+            <h1 class="title">To Do List</h1>
             <div class="input-box">
                 <input type="text" placeholder="Add Task ">
+                <button class="addbtn">Add</button>
             </div>
             
 
