styling of simple todo list app

--- a/todo.html
+++ b/todo.html
@@ -17,6 +17,17 @@
                 <input type="text" placeholder="Add Task ">
                 <button class="addbtn">Add</button>
             </div>
+            <div class="list">
+                <ul> 
+                    <li>Class work</li>
+                    <li>Class work</li> 
+                    <li>Class work</li>
+                    <li>Class work</li> 
+                    <li>Class work</li>
+                    <li>Class work</li>  
+                </ul>
+            
+            </div>
             
 
         </div>
